apps/openai/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: openai-service
  namespace: openai

spec:
  selector:
    app: cursor-ai-backend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
