apps/openai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: openai-ingress
  namespace: openai

spec:
  ingressClassName: nginx

  rules:
    - host: openai.shopnoltd.dpdns.org

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: openai-service

                port:
                  number: 80
